// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity Tag renders correctly for account creation 1`] = `
<DocumentFragment>
  <span
    class="Tag-sc-5420511e-0 JuGDv"
  >
    missing translation: en.transaction.trxTypes.account_create.title
  </span>
</DocumentFragment>
`;

exports[`Activity Tag renders correctly for account update 1`] = `
<DocumentFragment>
  <span
    class="Tag-sc-5420511e-0 JuGDv"
  >
    missing translation: en.transaction.trxTypes.account_update.title
  </span>
</DocumentFragment>
`;
